🚀 Initial release: MCP-Yahoo Finance IA v2.0.0
✨ 27 Professional Financial Tools:
• Portfolio Management & Performance Analysis
• Risk Analysis: VaR, Sharpe Ratio, Max Drawdown
• Technical Indicators: RSI, MACD, Moving Averages
• Options Trading with Implied Volatility
• Cryptocurrency & Currency Exchange Support
• AI-Powered News Sentiment Analysis
• Sector Rotation & Correlation Analysis
• Professional Visualizations & Charts

🔧 Enterprise-grade MCP server for Yahoo Finance integration
📊 Built for traders, analysts, and AI applications

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
-name = "mcp-yahoo-finance"
-version = "0.0.2"
-description = "MCP server for Yahoo Finance"
+name = "mcp-yahoo-finance-ia"
+version = "2.0.0"
+description = "Professional-grade MCP server with 26 financial tools: portfolio management, risk analysis, technical indicators, options trading, sector rotation, news sentiment, and comprehensive market analytics"
 readme = "README.md"
 requires-python = ">=3.10"
 dependencies = [
@@ -18,4 +18,4 @@ dependencies = [
 ]
 
 [project.scripts]
-mcp-yahoo-finance = "mcp_yahoo_finance.server:main"
+mcp-yahoo-finance-ia = "mcp_yahoo_finance.server:main"
